// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostCard does not render excerpt when explicitly null 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="card-media css-2wrb05"
      >
        <div
          className="css-1kkguim"
        />
      </div>
      <div
        className="css-iiqpqc"
      >
        <div
          className="css-1blzwpa"
        >
          Personal
        </div>
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostCard does not render excerpt when explicitly undefined 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="card-media css-2wrb05"
      >
        <div
          className="css-1kkguim"
        />
      </div>
      <div
        className="css-iiqpqc"
      >
        <div
          className="css-1blzwpa"
        >
          Personal
        </div>
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostCard matches the snapshot without excerpt 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="card-media css-2wrb05"
      >
        <div
          className="css-1kkguim"
        />
      </div>
      <div
        className="css-iiqpqc"
      >
        <div
          className="css-1blzwpa"
        >
          Personal
        </div>
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostCard renders excerpt when provided 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="card-media css-2wrb05"
      >
        <div
          className="css-1kkguim"
        />
      </div>
      <div
        className="css-iiqpqc"
      >
        <div
          className="css-1blzwpa"
        >
          Personal
        </div>
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
        <p
          className="description css-1uz48mf"
        >
          This is a sample excerpt for the blog post.
        </p>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostCard renders without banner when not provided 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="css-iiqpqc"
      >
        <div
          className="css-1blzwpa"
        >
          Personal
        </div>
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
      </div>
    </div>
  </div>
</a>
`;

exports[`PostCard renders without category when not provided 1`] = `
<a
  className="css-sod6qt"
  href="/blog/article"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="css-139dwiw"
  >
    <div
      className="card-content css-ihz6y5"
    >
      <div
        className="card-media css-2wrb05"
      >
        <div
          className="css-1kkguim"
        />
      </div>
      <div
        className="css-iiqpqc"
      >
        <h3
          className="css-1t3cywp"
        >
          My Blog Post
        </h3>
        <time
          className="created css-1c6hy0j"
        >
          1592202624
        </time>
      </div>
    </div>
  </div>
</a>
`;
